bootstrap/k8s/jaeger/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: jaeger-query
spec:
  selector:
    app: jaeger-all-in-one
  ports:
    - name: query
      protocol: TCP
      port: 80
      targetPort: 16686
  type: NodePort
---
