bootstrap/k8s/jaeger/all-in-one.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jaeger-all-in-one
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jaeger-all-in-one
  template:
    metadata:
      labels:
        app: jaeger-all-in-one
    spec:
      containers:
        - name: jaeger-all-in-one
          image: jaegertracing/all-in-one:latest
          ports:
            - containerPort: 16686
              name: query
            - containerPort: 14250
              name: jaeger-thrift
            - containerPort: 14268
              name: jaeger-agent

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jaeger-ingress
  annotations:
    spec.ingressClassName: "nginx"
spec:
  rules:
    - host: jaeger.local.gd
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jaeger-query
                port:
                  number: 80
---
apiVersion: v1
kind: Service
metadata:
  name: jaeger-query
spec:
  selector:
    app: jaeger-all-in-one
  ports:
    - name: query
      protocol: TCP
      port: 80
      targetPort: 16686
  type: NodePort
---
