bootstrap/k8s/jaeger/ingress-nginx.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jaeger-ingress
 annotations:
    networking.kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
    - host: jaeger.local.gd
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jaeger-query
                port:
                  number: 80
---
